locality-routing/resources/fakeservice/fakeservice-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fakeservice
  name: fakeservice
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: fakeservice
